<resources>
    <string name="app_name">Weather App</string>

    <string name="location_settings">Location Setting</string>
    <string name="location_settings_message">Please turn on location for better servicing. If you do not turn on location then you need to manually search for weather information in a particular location.</string>
    <string name="location_settings_button">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="location_cancel_message">Location auto detection system disable due to turn off location. To get weather info please search manually, Thank you.</string>
    <string name="weather_info_retrieve_filed">Sorry, Weather info retrieve failed. Please try again later.</string>
    <string name="data_updated_successfully">Data updated successfully</string>
    <string name="failed_for">Failed for:- </string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="details_with_arrow">Show Details &#8594;</string>
    <string name="other_details">Others Details</string>
    <string name="temp_details">Temperature Details</string>
    <string name="feels_like_details">Feels Like Details</string>
    <string name="sunrise_with_clone">Sunrise:- &#160;</string>
    <string name="sunset_with_clone">Sunset:- &#160;</string>
    <string name="temp_with_clone">Temperature:- &#160;</string>
    <string name="feels_like_with_clone">Feels Like:- &#160;</string>
    <string name="pressure_with_clone">Pressure:- &#160;</string>
    <string name="humidity_with_clone">Humidity:- &#160;</string>
    <string name="dew_point_with_clone">Dew Point:- &#160;</string>
    <string name="uvi_index_with_clone">Uvi Index:- &#160;</string>
    <string name="pop_with_clone">Possibility Of Precipitation:- &#160;</string>
    <string name="cloud_with_clone">Cloud:- &#160;</string>
    <string name="visibility_with_clone">Visibility:- &#160;</string>
    <string name="wind_speed_with_clone">Wind Speed:- &#160;</string>
    <string name="wind_deg_with_clone">Wind Degree:- &#160;</string>
    <string name="wind_direction_with_clone">Wind Direction:- &#160;</string>
    <string name="description_with_clone">Description:- &#160;</string>
    <string name="max_temp_with_clone">Max Temp:- &#160;</string>
    <string name="min_temp_with_clone">Min Temp:- &#160;</string>
    <string name="morning_temp_with_clone">Morning Temp:- &#160;</string>
    <string name="day_temp_with_clone">Day Temp:- &#160;</string>
    <string name="eve_temp_with_clone">Eve Temp:- &#160;</string>
    <string name="night_temp_with_clone">Night Temp:- &#160;</string>
    <string name="mile">&#160; mile</string>
    <string name="mile_per_hour">&#160; mile/hour</string>
    <string name="pressure_unit">&#160; hPa</string>
    <string name="percent_icon">&#160; %</string>
    <string name="degree_celsius">&#160; \u2103</string>
    <string name="degree_symbol">\u00B0</string>

    <string name="current_temp">Current Temperature:- &#160;</string>
    <string name="current_feels_like">Current Feels Like:- &#160;</string>
    <string name="wind_details">Wind Details</string>
    <string name="sun_details">Sun Details</string>
    <string name="radar">Radar</string>
    <string name="my_location">My Location</string>
    <string name="search">Search</string>
    <string name="search_city_name">City Name</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="item_count_with_clone">Item Count:- &#160;</string>
    <string name="app_feedback_title">Rate Our App</string>
    <string name="app_feedback_message">We are working hard for better user experience. We\'d greatly appreciate if you can rate us. (best rating will help us for inspiring to improve)</string>
    <string name="no_internet_message">No valid internet connection detected. Please check your internet connection to get current weather update.</string>
    <string name="thank_you">Thank you</string>
    <string name="found_new_update">Found New Version</string>
    <string name="new_update_message">Your app is not updated, Please update to latest version.</string>
    <string name="ok">Ok</string>
    <string name="update_now">Update Now</string>
    <string name="version_name">Version:- </string>
    <string name="unit_setting">Unit Setting</string>
    <string name="c">C</string>
    <string name="date_format">Date Format</string>
    <string name="date_month_year">dd MMM yyyy</string>
    <string name="time_format">Time Format</string>
    <string name="twentyFourHours">24 Hour</string>
    <string name="twelveHours">12 Hour</string>
    <string name="precipitation">Precipitation</string>
    <string name="mm">mm</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="kilo_meter_per_hour">km/h</string>
    <string name="pressure">Pressure</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="never">Never</string>
    <string name="later">Later</string>
    <string name="hourly_forecast_details">Hourly Forecast Details</string>
    <string name="daily_forecast_details">Daily Forecast Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Your Feedback</string>
    <string name="share">Share</string>
    <string name="choose_one">Choose one</string>
    <string name="feedback_title">Recommendation from application user.</string>
    <string name="weather_alert_message">Weather Alert Message</string>
    <string name="message_with_clone">Message:-</string>
    <string name="event_with_clone">Event:-</string>
    <string name="event_start_with_clone">Start:-</string>
    <string name="event_end_with_clone">End:-</string>
    <string name="sender_with_clone">Sender:-</string>
    <string name="rain_for_first_hour_with_clone">Rain for first hour:-</string>
    <string name="waqi">World Air Quality Index</string>
    <string name="waqi_with_clone">World Air Quality Index:-</string>
    <string name="source_with_clone">Source Name:-</string>
    <string name="waqi_first_message">
        Air quality is considered satisfactory, and air pollution poses little or no risk
    </string>
    <string name="waqi_second_message">
        Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.
    </string>
    <string name="waqi_third_message">
        Members of sensitive groups may experience health effects. The general public is not likely to be affected.
    </string>
    <string name="waqi_fourth_message">
        Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects
    </string>
    <string name="waqi_fifth_message">
        Health warnings of emergency conditions. The entire population is more likely to be affected.
    </string>
    <string name="waqi_sixth_message">
        Health alert: everyone may experience more serious health effects
    </string>





    <string-array name="date_units_list">
        <item>dd MMM yyyy</item>
        <item>MMM dd yyyy</item>
        <item>yyyy MMM dd</item>
    </string-array>
    <string-array name="time_format_units_list">
        <item>12 Hour</item>
        <item>24 Hour</item>
    </string-array>
    <string-array name="temperature_units_list">
        <item>C</item>
        <item>F</item>
        <item>K</item>
    </string-array>
    <string-array name="precipitation_units_list">
        <item>mm</item>
        <item>in</item>
    </string-array>
    <string-array name="wind_speed_units_list">
        <item>km/h</item>
        <item>mi/h</item>
        <item>m/s</item>
    </string-array>
    <string-array name="pressure_units_list">
        <item>mmHg</item>
        <item>hPa</item>
        <item>atm</item>
        <item>mbar</item>
    </string-array>



    <string name="privacy_policy_link">https://urappbazar5630.blogspot.com/p/weather-app-privacy-policy.html</string>




<!--    for test ads-->
    <string name="admob_application_id">ca-app-pub-3940256099942544~3347511713</string>

<!--    for real ads-->
<!--    <string name="admob_application_id">ca-app-pub-9356290658226735~8121936281</string>-->








</resources>