<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_hourly_forecast_details"
        android:icon="@drawable/ic_star"
        android:title="@string/hourly_forecast_details" />
    <item
        android:id="@+id/nav_daily_forecast_details"
        android:icon="@drawable/ic_star"
        android:title="@string/daily_forecast_details" />
    <item
        android:id="@+id/nav_unit_setting"
        android:icon="@drawable/ic_unit_setting"
        android:title="@string/unit_setting" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />
    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@drawable/ic_accessibility"
        android:title="@string/privacy_policy" />

</menu>